<resources>
    <string name="app_name">老司机快播</string>
    <string name="main_tab_1">优播</string>
    <string name="main_tab_2">无码</string>
    <string name="main_tab_3">频道</string>
    <string name="main_tab_4">VR</string>
    <string name="left_center_tab1_txt">用户留言</string>
    <string name="left_center_tab2_txt">用户协议</string>
    <string name="left_center_tab3_txt">联系客服</string>
    <string name="left_center_tab4_txt">升级会员</string>
    <string name="left_center_tab5_txt">设　　置</string>


    <string name="title_agreement">趣播免责声明</string>
    <string name="title2_agreement">【重要须知】</string>
    <string name="content_agreement">"1、一切移动客户端用户在下载并浏览趣播软件时均被视已 经仔细阅读本条款并完全同意.凡以任何方式登录本APP 或直接、 间接使用本APP资料者，均被视为自愿接受本网 站相关声明和用户服务协议的约束。
 2、趣播转载的内容并部代表趣播之意见及观点，也不意味 着本APP赞同其观点或证实其内容的真实性。
 3、趣播转载的文字、图片、音视频等资料均由本APP用户 提供，其实真实性、准确性和合法性由信息发布人负责。趣 播不提供任何保证，并部承担任何法律责任。
 4、趣播转载的文字、图片、音视频等资料，如果侵犯了第 三方的知识产权或其他权利，负责由作者或转载者本人承担 本APP对此不承担责任。
 5、趣播不保证为向用户提供便利而设置的外部链接的准确 性和完整性，同时，对于该外部链接指向的部由趣播实际控 制的任何网页上的内容，趣播不承担任何责任。
 6、用户明确并同意其使用趣播网络服务所存在的风险将完全 由其本人承担；因其使用趣播网络服务而产生的一切后果也 由其本人承担，趣播对此不承担任何责任。
 7、除趣播注明之服务条款外，其他因部当使用本APP而导 致的任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产 权侵犯及其所造成的任何损失，趣播概不负责，亦部承担任 何法律责任。
 8、对于因不可抗力或因黑客攻击、通讯线路中断等趣播不 能控制的原因造成的网络服务中断或其他缺陷，导致用户不 能正常使用趣播，趣播不承担任何责任，但将尽力减少因此 给用户造成的损失或影响。
 9、本声明未涉及的问题请参见国家有关法律法规，当本声 明与国家有关法律法规冲突时，以国家法律法规为准。
 10、本网站相关声明版权及其修改权、更新权和最终解释 权均属趣播所有。"</string>
      <string name="content_custom_service">"联系客服

 凡是要加微信客服或者要求转账的都是骗子、目前 很多人已经受骗、请勿在上当受骗！请认准客服 QQ以及客服电话欢迎咨询！
 ------------------
 一号客服QQ：3388299485（售后）
 二号客服QQ：3013378214（售后）
 三号客服QQ：3474036443（售后）
 特别嘱咐：添加好友是请再三检查QQ号码是否是 我们号码，QQ名称为QQ号码全是假的！我们不 存在任何微信，转账方式开通会员，请勿相信，若 受骗与我们无关。
 服务时间：周一至周日
 工作时间：早上09点-晚上00:00点
 若无法第一时间为您服务，请谅解！
"</string>

    <string name="content_custom_service_red">亲爱的用户你好，有意见请在上班时间联系客服 QQ留言我们会第一时间为您处理。谢谢</string>
    <string name="exit">再按一次退出程序!</string>
    <string name="fooder_botm">购买黄金会员,万部精彩视频等你看</string>
    <string name="pianku_bom">仅对会员开放</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
