<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/main_left_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_drawer" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/yb_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_tab1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/main_tab_1"
                android:textColor="@color/title_tab_txt_color"
                android:textSize="@dimen/main_tab_text_size" />

            <LinearLayout
                android:id="@+id/main_tab1_lin"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:background="@color/title_tab_txt_color"
                android:orientation="horizontal"
                android:visibility="gone"></LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wm_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_tab2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/main_tab_2"
                android:textColor="@color/title_tab_txt_color"
                android:textSize="@dimen/main_tab_text_size" />

            <LinearLayout
                android:id="@+id/main_tab2_lin"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:background="@color/title_tab_txt_color"
                android:orientation="horizontal"
                android:visibility="gone"></LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pd_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_tab3_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/main_tab_3"
                android:textColor="@color/title_tab_txt_color"
                android:textSize="@dimen/main_tab_text_size" />

            <LinearLayout
                android:id="@+id/main_tab3_lin"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:background="@color/title_tab_txt_color"
                android:orientation="horizontal"
                android:visibility="gone"></LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/vr_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_tab4_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/main_tab_4"
                android:textColor="@color/title_tab_txt_color"
                android:textSize="@dimen/main_tab_text_size" />

            <LinearLayout
                android:id="@+id/main_tab4_lin"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:background="@color/title_tab_txt_color"
                android:orientation="horizontal"
                android:visibility="gone"></LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_title_bar"
        android:overScrollMode="never"></android.support.v4.view.ViewPager>

</RelativeLayout>